[gd_scene load_steps=10 format=3 uid="uid://cl1o84arbeekw"]

[ext_resource type="Texture2D" uid="uid://cyesy8ylak2s0" path="res://assets/sprites/slime_green.png" id="1_7qphg"]
[ext_resource type="Script" path="res://scripts/greenslime.gd" id="1_fwf5s"]
[ext_resource type="PackedScene" uid="uid://cpy0mdfrcvsfp" path="res://scenes/killzone.tscn" id="2_ql5j6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b45x1"]
atlas = ExtResource("1_7qphg")
region = Rect2(0, 30, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy10q"]
atlas = ExtResource("1_7qphg")
region = Rect2(24, 30, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_db1t3"]
atlas = ExtResource("1_7qphg")
region = Rect2(48, 30, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq80x"]
atlas = ExtResource("1_7qphg")
region = Rect2(72, 30, 24, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_t8cma"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b45x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy10q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db1t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq80x")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n76xu"]
size = Vector2(12, 14)

[node name="Green Slime" type="Node2D"]
script = ExtResource("1_fwf5s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t8cma")
animation = &"Idle"
autoplay = "Idle"
frame = 2
frame_progress = 0.384587

[node name="Killzone" parent="." instance=ExtResource("2_ql5j6")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("RectangleShape2D_n76xu")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-10, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)

[node name="RayCastBottomRight" type="RayCast2D" parent="."]
target_position = Vector2(14, 12)

[node name="RayCastBottomLeft" type="RayCast2D" parent="."]
target_position = Vector2(-14, 12)
